# FLASK-restfull-api

./: .gitignore  LICENSE  Makefile  README.md  app.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  pytest.yml
doc/: README.md
instance/: README.md
project/: __init__.py
project/exceptions/: UserConsentRevoked.py  user_consent_revoked.py
project/http/: default.py  user_create_schema.json  user_update_schema.json  users.py
project/models/: user.py
tests/: conftest.py
tests/functional/: test_api.py  test_cli.py
tests/unit/: test_models.py
