[tool.poetry]
name = "flask-restfull-api"
version = "1.1.0"
description = "Test RestFull API using flask with unit/functional test coverage"
authors = ["Eugene Sedletsky <eugene.sedletsky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "2.3.1"
flake8 = "6.0.0"
pytest = "7.3.1"
pytest-cov = "4.0.0"
isort = "5.12.0"
safety = "2.3.5"
Flask-Login = "0.6.2"
email-validator = "2.0.0.post2"
bandit = "1.7.9"
Flask-SQLAlchemy = "3.0.3"
flask-restful = "0.3.10"
Flask-WTF ="1.1.1"
gunicorn = "20.1.0"
psycopg2-binary = "2.9.6"
pydantic = "1.10.7"
python-dotenv = "1.0.0"
pytest-dotenv = "0.5.2"
jsonschema = "4.18.4"
pylint = "^3.2.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
